--- a/package.json
+++ b/package.json
@@ -49,11 +49,13 @@
     "file-loader": "^0.9.0",
     "rimraf": "^2.4.3",
     "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7",
     "webpack": "^1.13.2",
     "webpack-dev-middleware": "^1.4.0",
     "webpack-hot-middleware": "^2.6.0"
   },
   "dependencies": {
+    "bootstrap": "^3.3.7",
     "react": "^15.3.1",
     "react-dom": "^15.3.1"
   }
